Fix welcome page layout issues.

--- a/assets/mythling/css/main.css
+++ b/assets/mythling/css/main.css
@@ -4,13 +4,18 @@
 	color: #ebebeb;
 	background-color: #263238;
 }
+.welcome-content {
+	max-width: 100%;
+	max-height: 100%;
+	display: inline-flex;
+}
 .welcome-main {
-  float: left;
   margin-top: 15px;
   margin-right: 20px;
 }
+.welcome-image {
+}
 .welcome-title {
-  float: left;
 	margin: 20px;
 	margin-right: 30px;
 }
@@ -22,6 +27,7 @@
 }
 .welcome-intro {
 	margin-left: 8px;
+  max-width: 450px;
 }
 .welcome-form {
 	margin: 10px;
@@ -30,6 +36,7 @@
 	border: 1px solid #ebebeb;
   box-shadow: 0 0 10px #ebebeb;
   border-radius: 5px;
+  max-width: 450px;
 }
 .welcome-form input {
 	width: 250px;
